--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+__pycache__/
+.env
+api_test.ipynb
+del.md
+del.py
+Lab_tests.csv
+test.py
+webhook.ipynb
